--- a/src/assets/styles/main.css
+++ b/src/assets/styles/main.css
@@ -15,10 +15,14 @@ body {
 }
 
 #app {
-  /* max-width: 1280px; */
   margin: 0 auto;
   /* padding: 2rem; */
   font-weight: normal;
+}
+
+.container {
+  min-width: auto;
+  max-width: 1280px;
 }
 
 /* a,
